--- a/style.css
+++ b/style.css
@@ -800,21 +800,20 @@ body {
 /* Desktop */
 @media (min-width: 1200px) {
     html {
-        max-width: 100%;
+        max-width: 95vw;
     }
     body {
-        max-width: 100%;
+        max-width: 99vw;
         background-color: rgb(255, 255, 255);
     }
     /* Layout */
     .container {
-        max-width: 1140px;
+        max-width: 100vw;
     }
-
     /* Cabeçalho */
     header {
         height: 73px;
-        width: 100vw;
+        width: 99vw;
         opacity: 1;
     }
     .FlexMenu {
@@ -870,16 +869,19 @@ body {
     }
     .hero-slider{
         background-color: #000000;
-        padding: 0 2px 0 1px;
-        width: 99.7vw;
-        height: 50vh;
-        overflow: clip;
+        width: 99.1vw;
+        height: 45vh;
+        overflow: hidden;
         font-family: 'GeosansLight', sans-serif;
     }
     
     .hero-slider .carousel-cell{
-        width: 35vw;
+        right: 300px;
+        width: 70vh;
         height: 50vh;
+        margin-left: -30px;
+        padding: 0 2px 0 2px;
+        overflow: hidden;
         background: no-repeat center/cover;
         display: flex;
         flex-direction: row;
@@ -901,13 +903,13 @@ body {
     }
     .line {
         top: 20px;
-        width: 100vw;
+        width: 99vw;
         height: 6.5px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
      /* Sobre nós */
     #Sobre {
-        max-width: 100vw;
+        max-width: 99vw;
         height: 650px;
         display: flex;
         flex-direction: row;
@@ -918,7 +920,7 @@ body {
         align-items: space-between;
     }
     .Container .Row {
-        max-width: 100vw;
+        max-width: 99vw;
     }
     .textoSobre {
         text-indent: center;
@@ -934,20 +936,20 @@ body {
         transition: transform 1s ease-in-out;
     }
     .linemid {
-        min-width: 100vw;
+        min-width: 99vw;
         width: 1200px;
         height: 5px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     #Cursos {
-        max-width: 100vw;
+        width: 97vw;
         margin-top: -20px;
         height: 100%;
         text-align: justify;
     }
     .infocurso {
         margin-top: -430px;
-        margin-left: -600px;
+        margin-left: -400px;
         text-align: center;
         font-family: 'Geosanslight', sans-serif;
         font-size: 22px;
@@ -998,7 +1000,7 @@ body {
         margin-top: 0px;
         padding: 10px 10px 50px 10px;
         height: 40vh;
-        width: 100vw;
+        width: 98vw;
         background-color: #000000;
         /* background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)); */
         justify-content: center;
@@ -1029,32 +1031,16 @@ body {
             width: 60%;
             height: 60%;
             left: 50px;
-        }
-        .foto3:before .foto3::after{
-            content: '';
-            position: absolute;
-            z-index: -1;
-            width: calc(100% + 30px);
-            height: calc(100% + 30px);
-            background: linear-gradient(90deg, black, white);
-            background-size: 100%;
-            border-radius: 10px;
-        }
-        .foto3::after {
-            filter: blur(50px);
-        }
+        }   
         #Servicos {
             background-image: url(img/alicatebg.png);
             background-size: 150vh;
             background-repeat: no-repeat;
             background-position-x: right;
-            padding-top: 0px;
-            padding-left: 100px;
-            padding-bottom: 150px;
+            padding: 100px;
             background-color: black;
             color: white;
-            max-height: 105vh;
-            max-width: 100vw;
+            width: 88.7vw;
             align-items: center;
             text-align: center;
             justify-content: center;
@@ -1068,14 +1054,13 @@ body {
             text-align: center;
         }
         .linemid1 {
-            max-width: 100vw;
-            width: 200.5vh;
+            width: 99vw;
             height: 3px;
             background: linear-gradient(to top left, gold, orange, chocolate);
         }
         .destaqueSobre3 {
-            margin-top: 300px;
-            margin-left: 800px;
+            margin-top: 150px;
+            margin-left: 755px;
             width: 60vh;
             font-family: 'Geosanslight', 'sans serif';
             font-size: 1.5em;
@@ -1085,6 +1070,8 @@ body {
         .textoSobre3 {
             font-family: 'Geosanslight', 'sans serif';
             font-size: 23px;
+            margin-left: 350px;
+            margin-bottom: -100px;
             width: 80vh;
             align-items: center;
             text-align: center;
@@ -1092,7 +1079,7 @@ body {
         }
         #botaoservico {
             box-sizing: border-box;
-            margin-top: 500px;
+            margin-top: 400px;
             margin-left: 15px;
             width: 130px;
             height: 20px;
@@ -1140,7 +1127,7 @@ body {
     }
     .destaqueSobre1 {
         font-family: "GeosansLight", sans-serif;
-        padding: 10px 150px 50px 100px;
+        padding: 10px 0px 50px 100px;
         text-align: center;
         height: 550px;
         font-size: 1.5em;
@@ -1204,7 +1191,7 @@ body {
         font-size: 28px;
         cursor: pointer;
         margin-top: -100px;
-        margin-right: 50px;
+        margin-right: 0px;
         margin-bottom: 50px;
     }
     #Inscrever:hover {
@@ -1225,11 +1212,14 @@ body {
     }
     .textoSobre1 {
         margin-top: 0px;
+        margin-left: 120px;
         font-size: 33px;
         width: 80vw;
     }
     #null {
-        max-width: 100vw;
+        text-align: center;
+        text-indent: center;
+        width: 98vw;
     }
     #null h2{
         font-size: 2em;
@@ -1239,7 +1229,7 @@ body {
     }
     /* LOCALIZAÇÃO DOS MAPAS */
     #LOCAL {
-        max-width: 100vw;
+        width: 99vw;
         height: 600px;
         display: flex;
         background-color: #000;
@@ -1250,7 +1240,7 @@ body {
         justify-content: center;
         padding-top: 30px;
         padding-bottom: 50px;
-        margin: 20px 600px 20px 680px;
+        margin: 20px 600px 20px 700px;
     }
     .map {
         width: 100%;
@@ -1265,7 +1255,7 @@ body {
     }
     /* CONTATOS */
     footer {
-        max-width: 100vw;
+        width: 96.9vw;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -1299,15 +1289,13 @@ body {
         margin-bottom: 10px;
     }   
     .linebot {
-        margin-left: -45px;
-        max-width: 100vw;
+        max-width: 99vw;
         height: 3px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     .linebot2 {
-        margin-left: -45px;
         margin-top: -150px;
-        max-width: 100vw;
+        max-width: 99vw;
         height: 3px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
