--- a/style.css
+++ b/style.css
@@ -355,8 +355,7 @@ body {
     .foto {
         background-image: url(img/logob.png);
         background-size: 45vh;
-        margin-top: 10px;
-        margin-left: -100px;
+        margin: 0 auto;
         height: 350px;
         width: 380px;
         position: relative;
@@ -439,11 +438,11 @@ body {
     }
     #Inscrever2 {
         box-sizing: border-box;
-        margin-top: 380px;
-        margin-left: 15px;
+        margin-top: 390px;
+        margin-left: 25px;
         width: 200px;
         height: 30px;
-        padding: 5px 19px 25px 19px;
+        padding: 5px 19px 5px 19px;
         background: transparent;
         border: 1px solid #000000;
         color: #000000;
@@ -479,12 +478,13 @@ body {
         background-image: url(img/CAPA.jpg);
         background-size: 60vw;
         margin-top: 50px;
+        margin: 0 auto;
         height: 38.5vh;
         width: 27vh;
         border-radius: 30px;
         box-shadow: 2px 3px 20px black;
         position: relative;
-        left: -360px; /* Começa fora da tela à esquerda */
+        right: 360px; /* Começa fora da tela à esquerda */
         transition: transform 1s ease, left 1s ease
     }
     .destaqueSobre {
@@ -498,7 +498,7 @@ body {
         font-family: 'Geosanslight', sans-serif;
         font-size: 25px;
         max-width: 90vw;
-        margin-top: -65px;
+        margin: 0 auto;
         color: #022031;
         padding: 10px 10px 10px 10px;
         text-align: center;
@@ -512,8 +512,8 @@ body {
     }
     .destaqueSobre1 {
         max-width: 90vw;
-        margin-top: 50px;
-        margin-left: 12px;
+        padding-top: 60px;
+        margin: 0 auto;
         font-family: 'Geosanslight', 'sans serif';
         font-size: 1.2em;
         text-align: center;
@@ -525,8 +525,8 @@ body {
     }
     .textoSobre1 {
         max-width: 90vw;
-        margin-top: 110px;
-        margin-left: 12px;
+        padding-top: 70px;
+        margin: 0 auto;
         font-family: 'Geosanslight', 'sans serif';
         font-size: 25px;
         text-align: center;
@@ -542,7 +542,7 @@ body {
         box-shadow: 1px 1px 5px #000;
         font-size: 20px;
         cursor: pointer;
-        margin: -50px 20px 20px 100px;
+        margin: 0px 20px 20px 115px;
     }
     /* LOCALIZAÇÃO FAIXA AZUL  */
     #null {
@@ -582,11 +582,11 @@ body {
         text-align: center;
         justify-content: center;
         max-width: 100vw;
-        width: 500px;
+        width: 430px;
     }
     .mapframe {
-        max-width: 100vw;
-        width: 500px;
+        margin: 0 auto;
+        max-width: 350px;
     }
     .linebot {
         width: 2000px;
@@ -1127,7 +1127,7 @@ body {
     }
     .destaqueSobre1 {
         font-family: "GeosansLight", sans-serif;
-        padding: 10px 0px 50px 100px;
+        padding: 50px 0px 50px 100px;
         text-align: center;
         height: 550px;
         font-size: 1.5em;
@@ -1191,7 +1191,7 @@ body {
         font-size: 28px;
         cursor: pointer;
         margin-top: -100px;
-        margin-right: 0px;
+        margin-left: 610px;
         margin-bottom: 50px;
     }
     #Inscrever:hover {
@@ -1200,7 +1200,6 @@ body {
     .textoSobre {
         color: #000;
         font-family: "GeosansLight", sans-serif;
-        right: -1000px;
         height: 500px;
         width: 1200px;
         display: flex;
@@ -1230,7 +1229,7 @@ body {
     /* LOCALIZAÇÃO DOS MAPAS */
     #LOCAL {
         width: 99vw;
-        height: 600px;
+        height: 700px;
         display: flex;
         background-color: #000;
     }
@@ -1238,13 +1237,12 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding-top: 30px;
-        padding-bottom: 50px;
-        margin: 20px 600px 20px 700px;
+        padding-bottom: 0px;
+        margin: 20px 600px 0px 700px;
     }
     .map {
-        width: 100%;
-        height: 370px;
+        width: 500px;
+        height: 500px;
         color: #000;
         background-color: #fff;
         margin-top: 15px;
@@ -1252,6 +1250,10 @@ body {
         border-radius: 80px;
         box-shadow: 20px 20px 100px linear-gradient(to top left, gold, orange, chocolate);
         text-align: center;
+    }
+    .mapframe1 {
+        width: 500px;
+        height: 450px;
     }
     /* CONTATOS */
     footer {
@@ -1271,6 +1273,7 @@ body {
     #Contato1 {
         max-width: 100vw;
         padding-top: 90px;
+        padding-left: 15px;
         margin-bottom: -170px;
         display: flex;
         flex-direction: row;
@@ -1308,5 +1311,8 @@ body {
         max-width: 100vw;
         margin-top: 100px;
         justify-content: bottom;
+    }
+    #creditotxt {
+        padding-left: 25px;
     }
 }
