--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ body {
         background-image: url(img/logob.png);
         background-size: 45vh;
         margin: 0 auto;
-        height: 300px;
+        height: 350px;
         width: 400px;
         position: relative;
         left: -360px; /* Começa fora da tela à esquerda */
@@ -372,6 +372,19 @@ body {
         left: -360px; /* Começa fora da tela à esquerda */
         transition: transform 1s ease, left 1s ease
     }
+    .foto2 {
+        background-image: url(img/CAPA.jpg);
+        background-size: 60vw;
+        margin-top: 50px;
+        margin: 0 auto;
+        height: 38.5vh;
+        width: 27vh;
+        border-radius: 30px;
+        box-shadow: 2px 3px 20px black;
+        position: relative;
+        right: 360px; /* Começa fora da tela à esquerda */
+        transition: transform 1s ease, left 1s ease
+    }
     .foto3 {
         background-image: url(img/afiacao.jpg);
         background-size: 90vw;
@@ -384,6 +397,18 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .foto4 {
+        background-image: url(img/CAPA2.png);
+        background-size: 60vw;
+        margin: 0 auto;
+        height: 38.5vh;
+        width: 27vh;
+        border-radius: 30px;
+        box-shadow: 2px 3px 20px black;
+        position: relative;
+        right: 0px; /* Começa fora da tela à esquerda */
+        transition: transform 1s ease, left 1s ease
     }
     #botaoservico {
         margin-top: 400px;
@@ -436,6 +461,31 @@ body {
     .infocurso h2 {
         font-size: 19px;
     }
+    .infocurso1 {
+        text-align: center;
+        font-family: 'Geosanslight', sans-serif;
+        font-size: 17px;
+    }
+    .infocurso1 h2 {
+        font-size: 19px;
+    }
+    #imgunhas {
+        margin: -50px 0px 15px -170px;
+    }
+    #instanaildesigner {
+        text-decoration: none;
+    }
+    #instanaildesigner h3{
+        color: black;
+        font-size: 1em;
+    }
+    #instabrowdesigner {
+        text-decoration: none;
+    }
+    #instabrowdesigner h3{
+        color: black;
+        font-size: 1em;
+    }
     #Inscrever2 {
         box-sizing: border-box;
         margin-top: 375px;
@@ -474,19 +524,7 @@ body {
             opacity: 0;
         }
     }
-    .foto2 {
-        background-image: url(img/CAPA.jpg);
-        background-size: 60vw;
-        margin-top: 50px;
-        margin: 0 auto;
-        height: 38.5vh;
-        width: 27vh;
-        border-radius: 30px;
-        box-shadow: 2px 3px 20px black;
-        position: relative;
-        right: 360px; /* Começa fora da tela à esquerda */
-        transition: transform 1s ease, left 1s ease
-    }
+
     .destaqueSobre {
         max-width: 90vw;
         font-family: 'Augustus', 'sans serif';
@@ -552,6 +590,49 @@ body {
     .presso h1 {
         font-size: 2em;
     }
+    .destaqueSobre2 {
+        max-width: 90vw;
+        padding-top: 60px;
+        margin: 0 auto;
+        font-family: 'Geosanslight', 'sans serif';
+        font-size: 1.2em;
+        text-align: center;
+        justify-content: center;
+    }
+    .destaqueSobre2 h1 {
+        color: rgb(5, 5, 5);
+        text-shadow: 1px 0px 0px rgb(252, 252, 252);
+    }
+    .textoSobre2 {
+        max-width: 90vw;
+        padding-top: 120px;
+        margin: 0 auto;
+        font-family: 'Geosanslight', 'sans serif';
+        font-size: 25px;
+        text-align: center;
+        justify-content: center;
+    }
+    #Inscrever3 {
+        font-family: "Montserrat", sans-serif;
+        background: linear-gradient(to top left, gold, orange, rgb(255, 106, 0));
+        color: #fff;
+        padding: 10px 50px;
+        border: none;
+        border-radius: 40px;
+        box-shadow: 1px 1px 5px #000;
+        font-size: 20px;
+        cursor: pointer;
+        margin: 0px 20px 20px 105px;
+    }
+    .presso2 {
+        margin-top: -20px;
+        text-align: center;
+        margin-bottom: 150px;
+    }
+    .presso2 h1 {
+        font-size: 2em;
+    }
+    
     /* LOCALIZAÇÃO FAIXA AZUL  */
     #null {
         max-width: 100vw;
@@ -918,9 +999,9 @@ body {
      /* Sobre nós */
     #Sobre {
         max-width: 99vw;
-        height: 650px;
+        height: 1200px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         background-color: white;
         padding: 10px 10px;
         text-align: justify;
@@ -931,6 +1012,7 @@ body {
         max-width: 99vw;
     }
     .textoSobre {
+        top: -280px;
         text-indent: center;
         text-align: center;
         position: relative;
@@ -975,6 +1057,45 @@ body {
         cursor: pointer;
         border-radius: 15px 15px 15px 15px;
         transition: transform 1s ease-in-out;
+    }
+    .infocurso1 {
+        margin-top: -390px;
+        margin-left: -600px;
+        text-align: center;
+        font-family: 'Geosanslight', sans-serif;
+        font-size: 22px;
+    }
+    .infocurso1 h2 {
+        font-size: 25px;
+    }
+    .foto4 {
+        background-size: cover;
+        position: relative;
+        margin-top: -550px;
+        margin-bottom: 400px;
+        height: 55vh;
+        width: 40vh;
+        cursor: pointer;
+        border-radius: 15px 15px 15px 15px;
+        transition: transform 1s ease-in-out;
+    }
+    .destaqueSobre2 {
+        font-family: "GeosansLight", sans-serif;
+        padding: 50px 0px 50px 35px;
+        text-align: center;
+        height: 550px;
+        font-size: 1.5em;
+    }
+    .destaqueSobre2 h2{
+        font-size: 30px;
+    }
+    .textoSobre2 {
+        text-align: center;
+        font-family: "GeosansLight", sans-serif;
+        margin-top: -150px;
+        margin-left: 35px;
+        font-size: 33px;
+        width: 80vw;
     }
     /* #container {
         position: relative;
@@ -1135,7 +1256,7 @@ body {
     }
     .destaqueSobre1 {
         font-family: "GeosansLight", sans-serif;
-        padding: 50px 0px 50px 100px;
+        padding: 50px 0px 50px 35px;
         text-align: center;
         height: 550px;
         font-size: 1.5em;
@@ -1205,6 +1326,23 @@ body {
     #Inscrever:hover {
         color: #000;
     }
+    #Inscrever3 {
+        font-family: "Montserrat", sans-serif;
+        background: linear-gradient(to top left, gold, orange, rgb(255, 106, 0));
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 40px;
+        box-shadow: 1px 1px 5px #000;
+        font-size: 28px;
+        cursor: pointer;
+        margin-top: -100px;
+        margin-left: -230px;
+        margin-bottom: -200px;
+    }
+    #Inscrever3:hover {
+        color: #000;
+    }
     .textoSobre {
         color: #000;
         font-family: "GeosansLight", sans-serif;
@@ -1240,6 +1378,14 @@ body {
         margin-bottom: 50px;
     }
     .presso h1 {
+        font-size: 2em;
+    }
+    .presso2 {
+        margin-top: -20px;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .presso2 h1 {
         font-size: 2em;
     }
     /* LOCALIZAÇÃO DOS MAPAS */
